--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -44,11 +44,11 @@
                 android:text="View Your Books"
                 android:id="@+id/myBooks"
                 android:layout_marginTop="70dp"
-                android:layout_below="@+id/userEmail"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignRight="@+id/signOut"
-                android:layout_alignEnd="@+id/signOut" />
+                android:layout_alignEnd="@+id/signOut"
+                android:layout_below="@+id/userName" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -107,15 +107,6 @@
                 android:layout_alignRight="@+id/myBooks"
                 android:layout_alignEnd="@+id/myBooks" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="User Email"
-                android:id="@+id/userEmail"
-                android:layout_below="@+id/userName"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
         </RelativeLayout>
 
 
