--- a/app/src/main/res/layout/activity_single_book_adapter.xml
+++ b/app/src/main/res/layout/activity_single_book_adapter.xml
@@ -46,13 +46,22 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true">
 
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="View Contact Info"
+                    android:id="@+id/contactBtn"
+                    android:layout_row="0"
+                    android:layout_column="0"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Large Text"
                     android:id="@+id/bookTitle"
-                    android:layout_row="1"
+                    android:layout_row="2"
                     android:layout_column="0" />
 
                 <Button
@@ -60,22 +69,13 @@
                     android:layout_height="wrap_content"
                     android:text="Submit Book"
                     android:id="@+id/bookSubmit"
-                    android:layout_row="0"
+                    android:layout_row="1"
                     android:layout_column="0" />
 
                 <ImageView
                     android:layout_width="228dp"
                     android:layout_height="228dp"
                     android:id="@+id/bookImage"
-                    android:layout_row="2"
-                    android:layout_column="0" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Medium Text"
-                    android:id="@+id/bookIsbn"
                     android:layout_row="3"
                     android:layout_column="0" />
 
@@ -84,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Medium Text"
-                    android:id="@+id/bookDescription"
+                    android:id="@+id/bookIsbn"
                     android:layout_row="4"
                     android:layout_column="0" />
 
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Medium Text"
-                    android:id="@+id/bookAuthor"
+                    android:id="@+id/bookDescription"
                     android:layout_row="5"
                     android:layout_column="0" />
 
@@ -102,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Medium Text"
-                    android:id="@+id/bookPubDate"
+                    android:id="@+id/bookAuthor"
                     android:layout_row="6"
                     android:layout_column="0" />
 
@@ -111,8 +111,17 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Medium Text"
-                    android:id="@+id/bookPub"
+                    android:id="@+id/bookPubDate"
                     android:layout_row="7"
+                    android:layout_column="0" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Medium Text"
+                    android:id="@+id/bookPub"
+                    android:layout_row="8"
                     android:layout_column="0" />
 
             </GridLayout>
